--- a/package.json
+++ b/package.json
@@ -2,15 +2,12 @@
   "scripts": {
     "start": "react-native start",
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "web": "expo start --web"
+    "ios": "react-native run-ios"
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-dom": "^16.8.6",
     "react-native": "0.59.8",
     "react-native-navigation": "2.22.3",
-    "react-native-web": "^0.11.4",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4"
   },
