--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native-navigation": "2.22.3",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
