--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-contacts": "4.0.2",
+    "react-native-firebase": "^5.5.5",
     "react-native-navigation": "2.22.3",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
