--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,16 +1,16 @@
 # Uncomment the next line to define a global platform for your project
 platform :ios, '9.0'
 
-target 'DanceForecast' do
+target 'MagicLife' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
 
-  # Pods for DanceForecast
+  # Pods for MagicLife
   pod 'Firebase/Core'
   pod 'Fabric', '~> 1.10.2'
   pod 'Crashlytics', '~> 3.13.2'
 
-  target 'DanceForecastTests' do
+  target 'MagicLifeTests' do
     inherit! :search_paths
     # Pods for testing
   end
