--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -13,11 +13,11 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.danceforecast.local</string>
+	<string>com.magiclife.local</string>
 	<key>PROJECT_ID</key>
-	<string>dance-forecast</string>
+	<string>magic-life</string>
 	<key>STORAGE_BUCKET</key>
-	<string>dance-forecast.appspot.com</string>
+	<string>magic-life.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,6 +31,6 @@
 	<key>GOOGLE_APP_ID</key>
 	<string>1:789391742026:ios:bc4b1eece774368c</string>
 	<key>DATABASE_URL</key>
-	<string>https://dance-forecast.firebaseio.com</string>
+	<string>https://magic-life.firebaseio.com</string>
 </dict>
 </plist>
