--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
-  "devDependencies": {
-    "babel-preset-expo": "^5.1.1"
-  },
+  "devDependencies": {},
   "private": true
 }
