--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,8 @@ target 'MagicLife' do
   pod 'Fabric', '~> 1.10.2'
   pod 'Crashlytics', '~> 3.13.2'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'MagicLifeTests' do
     inherit! :search_paths
     # Pods for testing
