eslint: don't warn for unused vars. They are harmless.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
   },
   "plugins": ["react", "react-hooks"],
   "rules": {
-    "no-unused-vars": "warn",
+    "no-unused-vars": "off",
     "react/prop-types": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
