--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,6 +78,7 @@ project.ext.react = [
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -118,12 +119,42 @@ android {
             include "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
         }
     }
+    signingConfigs {
+        release {
+            if (project.hasProperty('MLC_UPLOAD_STORE_FILE')) {
+                storeFile file(MLC_UPLOAD_STORE_FILE)
+                storePassword MLC_UPLOAD_STORE_PASSWORD
+                keyAlias MLC_UPLOAD_KEY_ALIAS
+                keyPassword MLC_UPLOAD_KEY_PASSWORD
+            }
+        }
+    }
     buildTypes {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
+    flavorDimensions "flavor-type"
+    productFlavors {
+        dev {
+            dimension "flavor-type"
+            applicationIdSuffix ".dev"
+            buildConfigField "String", "CODE_PUSH_API_KEY", "\"\""
+        }
+        qa {
+            dimension "flavor-type"
+            applicationIdSuffix ".qa"
+            buildConfigField "String", "CODE_PUSH_API_KEY", "\"0UC4wywouw-4Efrn7aN-wY03mE_3A9QMNJHkF\""
+            signingConfig signingConfigs.release
+        }
+        prod {
+            dimension "flavor-type"
+            buildConfigField "String", "CODE_PUSH_API_KEY", "\"\""
+            signingConfig signingConfigs.release
+        }
+    }
+
     // applicationVariants are e.g. debug, release
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
@@ -146,6 +177,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation project(':react-native-navigation')
+    implementation project(':react-native-code-push')
 
     // Firebase dependencies
     implementation "com.google.android.gms:play-services-base:16.1.0"
@@ -163,3 +195,9 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply plugin: 'com.google.gms.google-services'
+
+// https://github.com/microsoft/react-native-code-push/issues/1448
+// https://github.com/google/play-services-plugins/issues/30
+googleServices {
+    disableVersionCheck = true
+}
