--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,7 +18,8 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        // https://github.com/facebook/react-native/issues/22076 v3.3.1 works fine, 3.4 had issues.
+        classpath 'com.android.tools.build:gradle:3.3.1'
         classpath 'com.google.gms:google-services:4.2.0'
         classpath 'io.fabric.tools:gradle:1.28.1'
 
