--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "MagicLife",
   "scripts": {
     "start": "react-native start",
     "android": "react-native run-android",
@@ -9,6 +10,7 @@
     "lodash": "^4.17.15",
     "react": "16.8.3",
     "react-native": "0.59.8",
+    "react-native-code-push": "^5.6.1",
     "react-native-firebase": "^5.5.5",
     "react-native-navigation": "2.22.3",
     "react-native-vector-icons": "^6.6.0",
