--- a/ios/Podfile
+++ b/ios/Podfile
@@ -33,6 +33,8 @@ target 'MagicLife' do
 
   pod 'CodePush', :path => '../node_modules/react-native-code-push'
 
+  pod 'react-native-keep-awake', :path => '../node_modules/react-native-keep-awake'
+
   target 'MagicLifeTests' do
     inherit! :search_paths
     # Pods for testing
