--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -187,6 +187,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-device-info')
     implementation project(':react-native-keep-awake')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-firebase')
