--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-code-push": "^5.6.1",
+    "react-native-device-info": "^2.3.2",
     "react-native-firebase": "^5.5.5",
     "react-native-keep-awake": "^4.0.0",
     "react-native-navigation": "2.22.3",
