--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-code-push": "^5.6.1",
