--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,79 +1,104 @@
-# Android
-# Build your Android project with Gradle.
-# Add steps that test, sign, and distribute the APK, save build artifacts, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/android
-
 trigger:
   - master
 
-pool:
-  vmImage: 'macos-latest'
+jobs:
+  - job: "ReactBundle"
+    pool:
+      vmImage: 'macos-latest'
+    steps:
+      - task: GitVersion@5
+        inputs:
+          runtime: 'core'
+      - task: UseNode@1
+        displayName: 'Use node 10.x'
+        inputs:
+          version: '10.x'
+      - task: Bash@3
+        displayName: 'Install node modules'
+        inputs:
+          targetType: 'inline'
+          script: 'yarn'
+      - task: ReactNativeBundle@0
+        inputs:
+          platform: 'android'
+          entryFile: 'index.js'
+          bundleOutput: '$(build.artifactstagingdirectory)/main.jsbundle'
+          assetsDest: '$(build.artifactstagingdirectory)/*/Images.xcassets'
+          devFlag: false
+      - task: PublishBuildArtifacts@1
+        inputs:
+          PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+          ArtifactName: 'js'
+          publishLocation: 'Container'
 
-steps:
-  - task: DownloadSecureFile@1
-    displayName: 'Download playstore signing certificate'
-    name: 'uploadCertificate'
-    inputs:
-      secureFile: 'mlc-playstore-key.jks'
-  - task: GitVersion@5
-    inputs:
-      runtime: 'core'
-  - task: gittagloader@1
-    displayName: 'Read versionCode-* tag'
-    inputs:
-      filter: 'versionCode*'
-      lines: '1'
-      prefix: 'VersionCode'
-  - task: Bash@3
-    displayName: 'Parse versionCode-* tag, and incr.'
-    inputs:
-      targetType: 'inline'
-      script: |
-        VersionCode=$(echo "$(VersionCodeTag.Label)" | cut -d "-" -f 2)
-        VersionCode=$((VersionCode + 1))
-        echo '$(VersionCodeTag.Label) -> '$VersionCode
-        echo '##vso[task.setvariable variable=VersionCode;]'$VersionCode
-  - task: UseNode@1
-    displayName: 'Use node 10.x'
-    inputs:
-      version: '10.x'
-  - task: Bash@3
-    displayName: 'Install node modules'
-    inputs:
-      targetType: 'inline'
-      script: 'yarn'
-  - task: Gradle@2
-    env:
-      MLC_UPLOAD_STORE_FILE: $(uploadCertificate.secureFilePath)
-      MLC_UPLOAD_KEY_ALIAS: $(MLC_UPLOAD_KEY_ALIAS)
-      MLC_UPLOAD_STORE_PASSWORD: $(MLC_UPLOAD_STORE_PASSWORD)
-      MLC_UPLOAD_KEY_PASSWORD: $(MLC_UPLOAD_KEY_PASSWORD)
-    displayName: 'Android QA release'
-    inputs:
-      workingDirectory: 'android'
-      gradleWrapperFile: 'android/gradlew'
-      gradleOptions: '-Xmx3072m'
-      publishJUnitResults: false
-      testResultsFiles: '**/TEST-*.xml'
-      tasks: 'assembleQaRelease'
-      options: '-PversionCode=$(VersionCode) -PversionName=$(GitVersion.Major).$(GitVersion.Minor)'
-  - task: CopyFiles@2
-    displayName: 'Copy build artifacts'
-    inputs:
-      SourceFolder: 'android'
-      Contents: |
-        app/build/outputs/apk/**/app-qa-release.apk
-      TargetFolder: '$(build.artifactstagingdirectory)'
-      flattenFolders: true
-  - task: CopyFiles@2
-    displayName: 'Copy metadata'
-    enabled: false
-    inputs:
-      SourceFolder: 'android/metadata'
-      Contents: '**'
-      TargetFolder: '$(build.artifactstagingdirectory)/android/metadata'
-  - task: PublishBuildArtifacts@1
-    inputs:
-      PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-      ArtifactName: 'android'
-      publishLocation: 'Container'
+  - job: "Android"
+    pool:
+      vmImage: 'macos-latest'
+    steps:
+      - task: DownloadSecureFile@1
+        displayName: 'Download playstore signing certificate'
+        name: 'uploadCertificate'
+        inputs:
+          secureFile: 'mlc-playstore-key.jks'
+      - task: GitVersion@5
+        inputs:
+          runtime: 'core'
+      - task: gittagloader@1
+        displayName: 'Read versionCode-* tag'
+        inputs:
+          filter: 'versionCode*'
+          lines: '1'
+          prefix: 'VersionCode'
+      - task: Bash@3
+        displayName: 'Parse versionCode-* tag, and incr.'
+        inputs:
+          targetType: 'inline'
+          script: |
+            VersionCode=$(echo "$(VersionCodeTag.Label)" | cut -d "-" -f 2)
+            VersionCode=$((VersionCode + 1))
+            echo '$(VersionCodeTag.Label) -> '$VersionCode
+            echo '##vso[task.setvariable variable=VersionCode;]'$VersionCode
+      - task: UseNode@1
+        displayName: 'Use node 10.x'
+        inputs:
+          version: '10.x'
+      - task: Bash@3
+        displayName: 'Install node modules'
+        inputs:
+          targetType: 'inline'
+          script: 'yarn'
+      - task: Gradle@2
+        env:
+          MLC_UPLOAD_STORE_FILE: $(uploadCertificate.secureFilePath)
+          MLC_UPLOAD_KEY_ALIAS: $(MLC_UPLOAD_KEY_ALIAS)
+          MLC_UPLOAD_STORE_PASSWORD: $(MLC_UPLOAD_STORE_PASSWORD)
+          MLC_UPLOAD_KEY_PASSWORD: $(MLC_UPLOAD_KEY_PASSWORD)
+        displayName: 'Android QA release'
+        inputs:
+          workingDirectory: 'android'
+          gradleWrapperFile: 'android/gradlew'
+          gradleOptions: '-Xmx3072m'
+          publishJUnitResults: false
+          testResultsFiles: '**/TEST-*.xml'
+          tasks: 'assembleQaRelease'
+          options: '-PversionCode=$(VersionCode) -PversionName=$(GitVersion.Major).$(GitVersion.Minor)'
+      - task: CopyFiles@2
+        displayName: 'Copy build artifacts'
+        inputs:
+          SourceFolder: 'android'
+          Contents: |
+            app/build/outputs/apk/**/app-qa-release.apk
+          TargetFolder: '$(build.artifactstagingdirectory)'
+          flattenFolders: true
+      - task: CopyFiles@2
+        displayName: 'Copy metadata'
+        enabled: false
+        inputs:
+          SourceFolder: 'android/metadata'
+          Contents: '**'
+          TargetFolder: '$(build.artifactstagingdirectory)/android/metadata'
+      - task: PublishBuildArtifacts@1
+        inputs:
+          PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+          ArtifactName: 'android'
+          publishLocation: 'Container'
